2005-03-22  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (writeFormat, displayFormat): Do setName.

2005-03-20  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (define_syntax): Remove - no longer used.

	* kawa/standard/define_autoload.java) <init>: Pass Syntax name in.
	(define_autoload, define_autoloads_from_file): New static fields.
	* kawa/standard/export.java (module_export): Likewise.
	* kawa/standard/module_compile_options.java
	(module_compile_options): Likewise.
	* kawa/standard/module_extends.java (module_extends): Likewise.
	* kawa/standard/module_implements.java (module_implements): Likewise.
	* kawa/standard/module_name.java (module_name): Likewise.
	* kawa/standard/module_static.java (module_static): Likewise.
	* kawa/standard/syntax_error.java (syntax_error); Likewise.
	* kawa/standard/with_compile_options.java (with_compile_options):
	Likewise.
	* kawa/standard/Scheme.java: Change define_syntax -> defSntxStFld.

	* kawa/standard/define_class.java: New constructor.
	(define_class, define_simple_class): New static "instance" fields.
	* kawa/standard/constant_fold.java (constant_fold): Likewise.
	* kawa/standard/fluid_let.java (fluid_let): Likewise.
	* kawa/standard/object.java (objetSyntax): Likewise.
	* kawa/standard/define_unit.java (define_unit, define_base_unit):
	Likewis.
	* kawa/standard/prim_method.java (virtual_method, static_method,
	interface_method, constructor, op1): Likewise.
	* kawa/standard/Scheme.java: Update to use defSntxStFld.

	* kawa/standard/begin.java (begin): New static "instance" field.
	* kawa/standard/define.java (defineRaw): Likewise.
	* kawa/standard/define_alias.java (define_alias): Likewise.
	* kawa/standard/define_member_alias.java (define_member_alias):
	Likewise.
	* kawa/standard/define_syntax.java (define_macro, define_syntax):
	Likewise.
	* kawa/standard/define_variable.java (define_variable): Likewise.
	* kawa/standard/let_syntax.java (let_syntax, letrec_syntax): Likewise.